@@ -3988,14 +3988,12 @@ void idRenderSystemLocal::LoadWorld(pointer name) {
             R_LoadCubemapEntities("target_location");
         }
 
-        if (!tr.numCubemaps)
-        {
+        if(!tr.numCubemaps) {
             // use deathmatch spawn points as cubemaps
             R_LoadCubemapEntities("info_player_start");
         }
 
-        if (!tr.numCubemaps)
-        {
+        if(!tr.numCubemaps) {
             // use deathmatch spawn points as cubemaps
             R_LoadCubemapEntities("info_player_deathmatch");
         }
