@@ -428,7 +428,7 @@ void R_SetupEntityLighting(const trRefdef_t *refdef, trRefEntity_t *ent) {
     }
 
     // bonus items and view weapons have a fixed minimum add
-    if (!r_hdr->integer && ent->e.renderfx & RF_MINLIGHT) {
+    if(!r_hdr->integer && ent->e.renderfx & RF_MINLIGHT) {
         // give everything a minimum light add
         ent->ambientLight[0] += tr.identityLight * 32;
         ent->ambientLight[1] += tr.identityLight * 32;
