@@ -1171,8 +1171,8 @@ void RB_Contrast(FBO_t *src, ivec4_t srcBox, FBO_t *dst, ivec4_t dstBox) {
     }
 
     // if cvars are at their defaults, do no processing
-    if (r_brightness->value == 0.0f && r_contrast->value == 1.0f &&
-        r_gamma->value == 1.0) {
+    if(r_brightness->value == 0.0f && r_contrast->value == 1.0f &&
+            r_gamma->value == 1.0) {
         return;
     }
 
