@@ -3,6 +3,7 @@
 	* [RenderSystem] Misc fixes
 	* [Libraries] Updated OpenAL library
 	* [Libraries] Uploaded missing files
+	* [Server] Don't allow @@@ characters in the player name
 	
 2022-07-04 Dusan Jocic <dusanjocic@msn.com>
 	* [Engine] Moved function messaging system to C++ file
